# rag-debugger

./: .gitignore  LICENSE  PYPI_RELEASE.md  README.md  STATUS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package-check.yml  publish-pypi.yml
docs/: framework-guides.md
examples/: example_app.py  hallucination_trace.json  healthy_trace.json  low_retrieval_trace.json  wristwatch_kb_demo.py
scripts/: generate_readme_assets.py
src/rag_debugger/: __init__.py
src/rag_debugger/analysis/: __init__.py  analyzer.py  explanations.py  metrics.py  team.py
src/rag_debugger/cli/: __init__.py  commands.py
src/rag_debugger/core/: __init__.py  trace.py  tracer.py
src/rag_debugger/integrations/: __init__.py  auto.py  langchain.py  llamaindex.py
src/rag_debugger/utils/: __init__.py  dashboard_server.py  serialization.py
tests/: test_analyzer.py  test_cli.py  test_example_app.py  test_integrations.py  test_team.py  test_trace.py  test_tracer.py
