[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-debugger"
version = "0.1.0"
description = "Capture, analyze, and inspect RAG traces from the terminal."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Shivank Neelam Garg" }
]
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "llm",
  "observability",
  "debugging",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.8,<3.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
]

[project.urls]
Homepage = "https://github.com/Shivankneelamgarg/rag-debugger"
Repository = "https://github.com/Shivankneelamgarg/rag-debugger"
Issues = "https://github.com/Shivankneelamgarg/rag-debugger/issues"
Documentation = "https://github.com/Shivankneelamgarg/rag-debugger#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "build>=1.2,<2.0",
  "twine>=6.1,<7.0",
]

[project.scripts]
rag-debug = "rag_debugger.cli.commands:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
